# medivault

./: .dockerignore  README.md  docker-compose.yml  index.html  requirements.txt  styles.css
back_end/attachment_service/: .env.example  Dockerfile  README.md  pyproject.toml
back_end/attachment_service/app/: config.py  main.py  models.py  repositories.py  schemas.py  storage.py
back_end/attachment_service/tests/: test_storage.py
back_end/consult_orchestration_service/: .env.example  Dockerfile  README.md  pyproject.toml
back_end/consult_orchestration_service/app/: config.py  main.py  (+4 more)
back_end/patient_summary_service/: .env.example  Dockerfile  README.md  pyproject.toml
back_end/records_service/: Dockerfile  README.md  pyproject.toml  records_service.db
back_end/records_service/app/: auth.py  config.py  main.py  models.py  repositories.py  rules.py  schemas.py
back_end/records_service/docs/: records-service-mvp.md  records-service-schema.sql
back_end/records_service/medivault_records_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
back_end/records_service/tests/: test_rules.py  test_service_flow.py
front_end/: ai-note-assistant.css  ai-note-assistant.html  ai-note-assistant.js  doctor-auth.js  doctor-dashboard.css  doctor-dashboard.html  doctor-dashboard.js  index.html  intake-demo.css  intake-demo.html  intake-demo.js  login.css  login.html  login.js  previsit-summary.css  previsit-summary.html  previsit-summary.js  review-approve.css  review-approve.html  review-approve.js  saved-record.css  saved-record.html  saved-record.js  styles.css
(+9 files in other folders)
