[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medivault-records-service"
version = "0.1.0"
description = "MediVault records service MVP"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "email-validator>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=6.2,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
